<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/leaving2"
            android:title="Approve Leave Request" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance"
            android:title="Attendance View" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/notice"
            android:title="@string/menu_Notice" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="Calender" />



    </group>

    <item android:title="more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/call"
                android:title="@string/menu_ContactUs" />
            <item
                android:id="@+id/nav_helpCenter"
                android:icon="@drawable/help_center"
                android:title="@string/menu_helpCenter" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
