<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_viewing"
            android:icon="@drawable/view"
            android:title="Inbox" />
        <item
            android:id="@+id/nav_leavings"
            android:icon="@drawable/request3"
            android:title="Leave Request" />
        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/counter"
            android:title="Send SMS" />
        <item

            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_pay" />

        <item android:id="@+id/track"
            android:title="Track"
            android:icon="@drawable/ic_add_location_black_24dp"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="Video" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="Calender" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/call"
            android:title="@string/menu_ContactUs" />
        <item
            android:id="@+id/nav_helpCenter"
            android:icon="@drawable/help_center"
            android:title="@string/menu_helpCenter" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
