<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nPvigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/inbox"
            android:title="Inbox" />

        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="Track Your Bus" />

        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="Video" />

        <item
            android:id="@+id/id_card"
            android:icon="@drawable/ic_id_card"
            android:title="ID Card Details" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="Calender" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/call"
            android:title="@string/menu_ContactUs" />
        <item
            android:id="@+id/nav_helpCenter"
            android:icon="@drawable/help_center"
            android:title="@string/menu_helpCenter" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
